# xrossover

./: .gitignore  README.md  compile_schemas.sh  run_two_clients.sh
client/: .clang-format  .gitignore  CMakeLists.txt  Makefile  go.mod  go.sum  main  main.cpp  main.go  xrossover-client
client/flatbuffers/xrossover/: Action.go  ConnectionRequest.go  GameObjectUnion.go  GameObjectWrapper.go  GameWorld.go  Move.go  Movement.go  ObjectRegistry.go  Payload.go  PlayerBox.go
client/include/: Game.h
client/internal/buffer/: serialize.go
client/internal/game/: ball.go  game.go  hoop.go  network.go  object.go  player.go
client/src/: Game.cpp  main.cpp
schemas/: client.fbs  main.fbs
server/: .gitignore  go.mod  go.sum  main.go
server/flatbuffers/xrossover/: Ball.go  NetworkMessage.go  Payload.go  PlayerBox.go  PlayerInput.go  Vector3.go
server/internal/game/: ball.go  game.go  object.go  player.go
